--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
   .auth__form-container_image img {
     width: 100%;
     height: 100%;
+    aspect-ratio: 1 /1;
   }
   
   .auth__form-container_fields-content {
