--- a/src/App.css
+++ b/src/App.css
@@ -1108,6 +1108,10 @@
   .str-chat__message-team--received {
     padding-left: 20px;
   }
+
+  .str-chat__channel-list {
+    background-color: transparent;
+  }
   
   .str-chat__message-replies-count-button {
     z-index: 2;
